# cuda-cmake-nvtx

./: CMakeLists.txt  readme.md
cmake/: FindNVTX.cmake
include/: nvrtc_test.cuh  nvtx_util.cuh
src/: main.cu
